%% Serial/TCP console: command registry and executor task
%% GENERATED template (gen_templates.js) - curated content lives in
%% src/extra/console.mmd; class bodies live in defs/<Class>.mmd
classDiagram
    direction LR

    %%include Console
    %%include ConsoleCommand
    %%include ConsoleCommandBase
    %%include ConsoleCommandD
    %%include OptionsConsoleCommand

    ConsoleCommandBase <|-- ConsoleCommand
    ConsoleCommand <|-- ConsoleCommandD
    ConsoleCommandBase <|-- OptionsConsoleCommand

    Console *-- ConsoleCommandBase : registered commands

    note for Console "All commands run on one refcounted 16 KB console_exec task; I/O shells (console_repl 6 KB, tcp_session 4 KB, console_tcp listener 2.5 KB) are persistent boot-created tasks"
